--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/jamgejun/ECMAScript6#readme",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
-    "babel-core": "^6.26.3",
+    "@babel/runtime": "^7.4.3",
     "babel-loader": "^8.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
